--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
         <div id="header-carousel" class="carousel slide carousel-fade" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item position-relative active" style="height: 100vh; min-height: 400px;">
-                    <img class="position-absolute w-100 h-100" src="img/pratima-graham2.jpg" style="object-fit: cover;">
+                    <img class="position-absolute w-100 h-100" src="img/pratima-graham3.jpg" style="object-fit: cover;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h1 class="display-1 font-secondary text-white mt-n3 mb-md-4">Pratima & Graham</h1>
                             <div class="d-inline-block border-top border-bottom border-light py-3 px-4">
-                                <h3 class="text-uppercase font-weight-normal text-white m-0" style="letter-spacing: 2px;">We're getting married</h3>
+                                <h3 class="text-uppercase font-weight-normal text-white m-0" style="letter-spacing: 2px;">We're getting married!!!</h3>
                             </div>
                         </div>
                     </div>
@@ -81,14 +81,22 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-6 text-center">
-                    <h5 class="font-weight-normal text-muted mb-3 pb-3">We can't wait to share our special day with you. Help us capture our wedding with Joy.</h5>
+                    <h5 class="font-weight-normal text-muted mb-3 pb-3">Please join us in celebrating our special day.</h5>
                 </div>
             </div>
+            <div class="row justify-content-center">
+                <div class="col-md-6 text-center">
+                    <h6 class="font-weight-normal text-muted mb-3 pb-3">“For I know the plans I have for you, declares the Lord, plans for welfare and not for evil, to give you a future and a hope.”<br/>- Jeremiah 29:11</h6>
+                </div>
+            </div>
+            
             <div class="row">
                 <div class="col-md-6 border-right border-primary">
                     <div class="text-center text-md-right mr-md-3 mb-4 mb-md-0">
                         <img class="img-fluid mb-4" src="img/event-1.jpg" alt="">
-                        <h4 class="mb-3">Holy Family Catholic Church</h4>
+                        <h4 class="mb-3">Sacrament of Holy Matrimony</h4>
+                        <p class="mb-2"><a href="https://maps.app.goo.gl/8NNHeihPM3WTg9JM6" target="_blank">Holy Family Catholic Church</a></p>
+                        <p class="mb-2">Celebrated by Rev Fr Jeremy Palman</p>
                         <p class="mb-2">94 Taikata Road</p>
                         <p class="mb-2">Te Atatū Peninsula</p>
                         <p class="mb-0">12pm - 1pm</p>
@@ -98,7 +106,10 @@
                     <div class="text-center text-md-left ml-md-3">
                         <img class="img-fluid mb-4" src="img/event-2.jpg" alt="">
                         <h4 class="mb-3">Reception</h4>
-                        <p class="mb-2">Olive Kitchen & Bar</p>
+                        <p class="mb-2"><a href="https://maps.app.goo.gl/eYq7yxpauHqgoV9R6" target="_blank">The Olive Kitchen & Bar</a></p>
+                        <p class="mb-2">233 Scenic Drive</p>
+                        <p class="mb-2">Titirangi</p>
+                        <p class="mb-2">&nbsp;</p>
                         <p class="mb-0">From 1:30pm</p>
                     </div>
                 </div>
@@ -118,12 +129,11 @@
             <div class="container timeline position-relative p-0">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-right">
-                        <img class="img-fluid mr-md-3" src="img/story-1.jpg" alt="">
                     </div>
                     <div class="col-md-6 text-center text-md-left">
                         <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4 ml-md-3">
                             <h4 class="mb-2">When is the RSVP deadline?</h4>
-                            <p class="m-0">Please RSVP by September 25th, so we can have an accurate headcount. :)</p>
+                            <p class="m-0">Please RSVP by 30th August, so we can have an accurate headcount.</p>
                         </div>
                     </div>
                 </div>
@@ -131,22 +141,20 @@
                     <div class="col-md-6 text-center text-md-right">
                         <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4 mr-md-3">
                             <h4 class="mb-2">Are kids welcome?</h4>
-                            <p class="m-0">Yes, kids are very welcome. During the ceremony the church has a special room where you can take the kids and still be able to watch the ceremony.</p>
+                            <p class="m-0">Yes, kids are very welcome. During the ceremony the church has a family room where you can take the kids and still be able to participate in the ceremony.</p>
                         </div>
                     </div>
                     <div class="col-md-6 text-center text-md-left">
-                        <img class="img-fluid ml-md-3" src="img/story-2.jpg" alt="">
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-6 text-center text-md-right">
-                        <img class="img-fluid mr-md-3" src="img/story-3.jpg" alt="">
                     </div>
                     <div class="col-md-6 text-center text-md-left">
                         <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4 ml-md-3">
                             <h4 class="mb-2">Where should I park?</h4>
                             <p class="m-0">There is plenty of free parking at the rear of the church. Just drive down the left hand side of the church to the back.</p>
-                            <p class="mt-1">Olive Kitchen and Bar also has plenty of parking.</p>
+                            <p class="mt-1">The Olive Kitchen & Bar also has plenty of parking.</p>
                         </div>
                     </div>
                 </div>
@@ -154,21 +162,39 @@
                     <div class="col-md-6 text-center text-md-right">
                         <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4 mr-md-3">
                             <h4 class="mb-2">What should I wear?</h4>
-                            <p class="m-0">The dress is smart casual.</p>
+                            <p class="m-0">There's no specific dress code—we'll leave it up to you to wear whatever makes you feel comfortable.</p>
                         </div>
                     </div>
                     <div class="col-md-6 text-center text-md-left">
-                        <img class="img-fluid ml-md-3" src="img/story-4.jpg" alt="">
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-6 text-center text-md-left">
-                        <img class="img-fluid ml-md-3" src="img/story-4.jpg" alt="">
                     </div>
                     <div class="col-md-6 text-center text-md-left">
                         <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4 mr-md-3">
                             <h4 class="mb-2">How long is the drive from the church to the reception?</h4>
                             <p class="m-0">The drive is about 30 minutes.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 text-center text-md-right">
+                        <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4 mr-md-3">
+                            <h4 class="mb-2">When can we take photos with the bride & groom?</h4>
+                            <p class="m-0">There will be plenty of opportunity to take photos with the bride and groom at the reception.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 text-center text-md-left">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 text-center text-md-left">
+                    </div>
+                    <div class="col-md-6 text-center text-md-left">
+                        <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4 mr-md-3">
+                            <h4 class="mb-2">How long is the Nuptial Mass?</h4>
+                            <p class="m-0">The Nuptial Mass is expected to last for 1 hour.</p>
                         </div>
                     </div>
                 </div>
@@ -187,15 +213,16 @@
             <div class="row text-center">
                 <div class="col-md-3"></div>
                 <div class="col-md-6 text-center">
-                    <p>You'll be please to know that we are not expecting gifts. We have more than enough things. Having you attend
+                    <p>You'll be please to know that we are not expecting gifts. Having you attend
                         our special day, is gift enough for us.</p>
-                    <p>However if you would like to give something, we ask that you donate to one of the following charities:</p>
+                    <p>However, if you would still like to give something, we kindly invite you to consider donating to one of the following charities:</p>
                     <ul class="list-unstyled">
-                        <li><a href="https://spca.nz" target="_blank">SPCA</a></li>
-                        <li><a href="https://mercyhospice.org.nz" target="_blank">Mercy Hospice</a></li>
-                        <li><a href="https://pregnancyhelp.org.nz" target="_blank">Pregnancy Help</a></li>
-                        <li><a href="https://www.cancer.org.nz" target="_blank">Cancer Society</a></li>
                         <li><a href="https://givealittle.co.nz/org/st-mary-the-immaculate-conception-avondale" target="_blank">St Mary's Avondale</a></li>
+                        <li><a href="https://spca.nz" target="_blank">SPCA</a></li>
+                        <li><a href="https://pregnancyhelp.org.nz" target="_blank">Pregnancy Help</a></li>
+                        <li><a href="https://mercyhospice.org.nz" target="_blank">Mercy Hospice</a></li>
+                        <li><a href="https://www.cancer.org.nz" target="_blank">Cancer Society</a></li>
+                        <li><a href="https://birdcareaotearoa.org.nz" target="_blank">BirdCare Aoteroa</a></li>
                     </ul>
                 </div>
             </div>
