--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Pratima & Graham - Wedding</title>
+    <title>Pratima & Graham - Holy Matrimony</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <!-- Favicon -->
@@ -60,7 +60,7 @@
                         <div class="p-3" style="max-width: 900px;">
                             <h1 class="display-1 font-secondary text-white mt-n3 mb-md-4">Pratima & Graham</h1>
                             <div class="d-inline-block border-top border-bottom border-light py-3 px-4">
-                                <h3 class="text-uppercase font-weight-normal text-white m-0" style="letter-spacing: 2px;">We're getting married!!!</h3>
+                                <h3 class="text-uppercase font-weight-normal text-white m-0" style="letter-spacing: 2px;">We said yes to forever!!!</h3>
                             </div>
                         </div>
                     </div>
@@ -222,7 +222,7 @@
                         <li><a href="https://pregnancyhelp.org.nz" target="_blank">Pregnancy Help</a></li>
                         <li><a href="https://mercyhospice.org.nz" target="_blank">Mercy Hospice</a></li>
                         <li><a href="https://www.cancer.org.nz" target="_blank">Cancer Society</a></li>
-                        <li><a href="https://birdcareaotearoa.org.nz" target="_blank">BirdCare Aoteroa</a></li>
+                        <li><a href="https://birdcareaotearoa.org.nz" target="_blank">BirdCare Aotearoa</a></li>
                     </ul>
                 </div>
             </div>
