Updated the gifts.

--- a/index.html
+++ b/index.html
@@ -213,8 +213,7 @@
             <div class="row text-center">
                 <div class="col-md-3"></div>
                 <div class="col-md-6 text-center">
-                    <p>You'll be please to know that we are not expecting gifts. Having you attend
-                        our special day, is gift enough for us.</p>
+                    <p>Having you attend our special day, is gift enough for us.</p>
                     <p>However, if you would still like to give something, we kindly invite you to consider donating to one of the following charities:</p>
                     <ul class="list-unstyled">
                         <li><a href="https://givealittle.co.nz/org/st-mary-the-immaculate-conception-avondale" target="_blank">St Mary's Avondale</a></li>
