Updated the kids bit.

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <div class="col-md-6 text-center text-md-right">
                         <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4 mr-md-3">
                             <h4 class="mb-2">Are kids welcome?</h4>
-                            <p class="m-0">Yes, kids are very welcome. During the ceremony the church has a family room where you can take the kids and still be able to participate in the ceremony.</p>
+                            <p class="m-0">Yes, kids are very welcome. If you need to, during the ceremony the church has a family room where you can take the kids and still be able to participate in the ceremony.</p>
                         </div>
                     </div>
                     <div class="col-md-6 text-center text-md-left">
