--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <div class="col-md-6 text-center text-md-left">
                         <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4 ml-md-3">
                             <h4 class="mb-2">When is the RSVP deadline?</h4>
-                            <p class="m-0">Please RSVP by 30th August, so we can have an accurate headcount.</p>
+                            <p class="m-0">Please RSVP by 30th August, so we can have an accurate headcount. To RVSP, just message Pratima or Graham directly.</p>
                         </div>
                     </div>
                 </div>
