--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="col-md-6 border-right border-primary">
                     <div class="text-center text-md-right mr-md-3 mb-4 mb-md-0">
                         <img class="img-fluid mb-4" src="img/event-1.jpg" alt="">
-                        <h4 class="mb-3">Sacrament of Holy Matrimony</h4>
+                        <h4 class="mb-3">Holy Matrimony</h4>
                         <p class="mb-2"><a href="https://maps.app.goo.gl/8NNHeihPM3WTg9JM6" target="_blank">Holy Family Catholic Church</a></p>
                         <p class="mb-2">Celebrated by Rev Fr Jeremy Palman</p>
                         <p class="mb-2">94 Taikata Road</p>
@@ -140,8 +140,8 @@
                 <div class="row">
                     <div class="col-md-6 text-center text-md-right">
                         <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4 mr-md-3">
-                            <h4 class="mb-2">Are kids welcome?</h4>
-                            <p class="m-0">Yes, kids are very welcome. If you need to, during the ceremony the church has a family room where you can take the kids and still be able to participate in the ceremony.</p>
+                            <h4 class="mb-2">Are children welcome?</h4>
+                            <p class="m-0">Yes, children are very welcome. If you need to, during the ceremony the church has a family room where you can take the children and still be able to participate in the ceremony.</p>
                         </div>
                     </div>
                     <div class="col-md-6 text-center text-md-left">
