Fixed the spelling of arrive.

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <p class="mb-2">94 Taikata Road</p>
                         <p class="mb-2">Te Atatū Peninsula</p>
                         <p class="mb-0">12pm - 1pm</p>
-                        <p class="mb-0">(guests arive from 11:30am)</p>
+                        <p class="mb-0">(guests arrive from 11:30am)</p>
                     </div>
                 </div>
                 <div class="col-md-6">
