Removed missing images.

--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@
             <div class="row">
                 <div class="col-md-6 border-right border-primary">
                     <div class="text-center text-md-right mr-md-3 mb-4 mb-md-0">
-                        <img class="img-fluid mb-4" src="img/event-1.jpg" alt="">
-                        <h4 class="mb-3">Holy Matrimony</h4>
+                        <h4 class="mb-3 mt-4">Holy Matrimony</h4>
                         <p class="mb-2"><a href="https://maps.app.goo.gl/8NNHeihPM3WTg9JM6" target="_blank">Holy Family Catholic Church</a></p>
                         <p class="mb-2">Celebrated by Rev Fr Jeremy Palman</p>
                         <p class="mb-2">94 Taikata Road</p>
@@ -105,8 +104,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="text-center text-md-left ml-md-3">
-                        <img class="img-fluid mb-4" src="img/event-2.jpg" alt="">
-                        <h4 class="mb-3">Reception</h4>
+                        <h4 class="mb-3 mt-4">Reception</h4>
                         <p class="mb-2"><a href="https://maps.app.goo.gl/eYq7yxpauHqgoV9R6" target="_blank">The Olive Kitchen & Bar</a></p>
                         <p class="mb-2">233 Scenic Drive</p>
                         <p class="mb-2">Titirangi</p>
